Principal Component Analysis, Sobelov Spaces, abcstat 0.19

--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -458,6 +458,20 @@
   urla         = {http://www.amazon.com/dp/9781119457763},
   }
 
+@book{carmona2013,
+  isbn         = {9781461487883},
+  isbn10       = {1461487889},
+  title        = {Statistical Analysis of Financial Data in R},
+  series       = {Springer Texts in Statistics},
+  author       = {Ren/'e Carmona},
+  edition      = {2},
+  publisher    = {Springer Science \& Business Media},
+  year         = {2013},
+  pages        = {588},
+  url          = {http://books.google.com/books?vid=ISBN9781461487883},
+  urla         = {http://www.amazon.com/dp/9781461487883},
+  }
+
 @inproceedings{carne2006,
   author       = {Thomas G. Carne and C. R. Dohrmann},
   title        = {Improving Experimental Frequency Response Function Matrices for Admittance Modeling},
@@ -832,6 +846,17 @@
   urla         = {http://www.amazon.com/dp/0023535717},
   }
 
+@article{hotelling1933,
+  author       = {Harold Hotelling},
+  year         = {1933},
+  title        = {Analysis of a complex of statistical variables into principal components},
+  journal      = {Journal of Educational Psychology},
+  volume       = {24},
+  number       = {6},
+  pages        = {417--441},
+  url          = {http://dx.doi.org/10.1037/h0071325},
+  }
+
 @book{jazwinski1970,
   title        = {Stochastic Processes and Filtering Theory},
   publisher    = {Dover Books on Electrical Engineering},
@@ -853,6 +878,17 @@
   pages        = {376},
   }
 
+@article{jeffers1967,
+  title        = {Two Case Studies in the Application of Principal Component Analysis},
+  journal      = {Royal Statistical Society},
+  volume       = {16},
+  number       = {3},
+  pages        = {225--236},
+  author       = {J. N. R. Jeffers},
+  year         = {1967},
+  url          = {https://doi.org/10.2307/2985919},
+  }
+
 @book{jenkins1968,
   title        = {Spectral analysis and its applications},
   author       = {Gwilym M. Jenkins and Donald G. Watts},
@@ -861,6 +897,17 @@
   pages        = {525+xviii},
   series       = {Holden-Day series in time series analysis},
   url          = {https://archive.org/details/spectralanalysis00jenk_0},
+  }
+
+@article{jolliffe1982,
+  title        = {A Note on the Use of Principal Components in Regression},
+  author       = {Ian T. Jolliffe},
+  year         = {1982},
+  url          = {https://doi.org/10.2307/2348005},
+  journal      = {Royal Statistical Society},
+  volume       = {31},
+  number       = {2},
+  pages        = {300--303},
   }
 
 @article{johnstone1997,
@@ -916,6 +963,18 @@
   publisher    = {Prentice Hall},
   year         = {1988},
   pages        = {543},
+  }
+
+@book{kendall1968,
+  author       = {M. G. Kendall},
+  title        = {A Course in Multivariate Analysis},
+  series       = {Griffin's Statistical Monographs \& Courses},
+  volume       = {2},
+  address      = {New York},
+  publisher    = {Hafner Publishing Company},
+  year         = {1968},
+  edition      = {``Fourth Impression"},
+  url          = {https://archive.org/details/courseinmultivar0000kend},
   }
 
 @book{kenney1942,
@@ -1129,6 +1188,7 @@
 @techreport{mendez2019,
   title        = {US Egg Production Data Set},
   number       = {E008R01},
+  year         = {2019},
   author       = {Samara Mendez},
   institution  = {The Human League Labs},
   doi          = {10.17605/OSF.IO/Z2GXN},
@@ -1621,6 +1681,32 @@
   year         = {2002},
   isbn         = {0-471-09390-4},
   url          = {http://ece.gmu.edu/faculty\_info/van.html},
+  }
+
+@book{wasserman2006,
+  isbn         = {9780387306230},
+  isbn10       = {0387306234},
+  title        = {All of Nonparametric Statistics},
+  series       = {Springer Texts in Statistics},
+  author       = {Larry Wasserman},
+  publisher    = {Springer Science \& Business Media},
+  year         = {2006},
+  pages        = {270},
+  url          = {http://books.google.com/books?vid=ISBN9780387306230},
+  urla         = {http://www.amazon.com/dp/9780387306230},
+  }
+
+@book{wasserman2013,
+  isbn         = {9780387217369},
+  isbn10       = {0387217363},
+  title        = {All of Statistics: A Concise Course in Statistical Inference},
+  series       = {Springer Texts in Statistics},
+  author       = {Larry Wasserman},
+  publisher    = {Springer Science \& Business Media},
+  year         = {2013},
+  pages        = {442},
+  url          = {http://books.google.com/books?vid=ISBN9780387217369},
+  urla         = {http://www.amazon.com/dp/9780387217369},
   }
 
 @article{wdcsilo_sunspot,
