--- a/common/density_estimation.tex
+++ b/common/density_estimation.tex
@@ -123,3 +123,19 @@ KDE's are conceptually quite simple, but do have some difficulties:
 
 For cases where the dimension is 6 or greater, one option is to perform 
 \ope{data dimensionality reduction} \xref{chp:dimreduct}.
+
+
+%=======================================
+\section{Smoothness}
+%=======================================
+For a given stochastic process, an infinite number of density estimates exist. 
+Some constraints on inclusion into the estimate family are in order. 
+One contraint is that the density estimate is not ``too wiggly".\footnote{
+  \citerpgc{wasserman2013}{88}{9780387217369}{``6.5 Example (Nonparametric density estimation)."}
+  }
+Mathematically, this may expressed as requiring the estimate to be a member of a \structd{Sobelov Space} $\setS$
+\\\indentx$\ds \setS \eqd \set{\ff}{\int_{x\in\R} \brs{\ff"(x)}^2 \dx < r^2}$\\
+where $r$ is some constant in $\R$ or where $r^2$ is $\infty$.
+
+
+
