--- a/common/sty/dan.sty
+++ b/common/sty/dan.sty
@@ -20,6 +20,7 @@
 %--------------------------------------
 % stamps
 %--------------------------------------
+ \newcommand{\datestamp}{{\dateLong\today}}
  \newcommand{\timestamp}{{\dateLong\today} {\settimeformat{timeUTC}\currenttime}}
  \newcommand{\copyrightstamp}{Copyright {\textcopyright} {\dateYear\today} Daniel J. Greenhoe}
  \newcommand{\copyrightshort}{Copyright {\textcopyright} {\dateYear\today} Daniel J. Greenhoe}
@@ -915,7 +916,8 @@
   \begin{tabular}[t]{@{}c@{}}%
     \blanksso[#1]{#3}%
     \\%
-    \scriptsize\textcolor{blue}{#2}%
+    %\scriptsize\textcolor{blue}{#2}%
+    \scriptsize#2%
   \end{tabular}%
   \renewcommand{\arraystretch}{1}
   }%
