new model estimation chapter

--- a/common/expectation.tex
+++ b/common/expectation.tex
@@ -6,6 +6,19 @@
 \chapter{Expectation operator}
 \label{chp:stats}
 %======================================
+\qboxnps
+  {Aristotle (384 BC -- 322 BC)
+    \index{Aristotle}
+    \index{quotes!Aristotle}
+    \footnotemark
+  }
+  {../common/people/aristot.jpg}
+  {A likely impossibility is always preferable to an
+  unconvincing possibility.}
+  \footnotetext{\begin{tabular}[t]{ll}
+    quote: & \url{http://en.wikiquote.org/wiki/Aristotle} \\
+    image: & \url{http://en.wikipedia.org/wiki/Aristotle}
+  \end{tabular}}
 %=======================================
 \section{Definitions}
 \label{sec:pE_defs}
