--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -981,6 +981,7 @@
 
 \newcommand{\deriv} [2]   {{\frac{\mathrm{d}#1}{\mathrm{d}#2} }}
 \newcommand{\pderiv}[2]   {{\frac{\partial#1}{\partial#2} }}
+\newcommand{\ppderiv}[2]   {{\frac{\partial^2#1}{\partial#2} }}
 
 \newcommand{\opddx}{\opDif}    % differentiation operator d/dt
 \newcommand{\opddt}{\opDif[t]} % differentian operator d/dt
