--- a/common/model_estimation.tex
+++ b/common/model_estimation.tex
@@ -14,8 +14,8 @@ an intractable solution computationally and require more data than is available
 For modeling real-world random processes above the quantum level, here are some possibly useful parameters to estimate and use:
 \begin{enumerate}
   \item Derivatives $0,1,\ldots n$, where $n$ may be 2 or 3.
-        Brook Taylor showed that for analytic functions (functions for which all their derivatives exist),
-        knowledge of the derivatives of a function 
+        Brook Taylor showed that for \prope{analytic} functions,\footnote{analytic function: a function for which all its derivatives exist}
+        knowledge of the derivatives about a point at $x=a$
         %\\\indentx$\seqn{\ff(a),\, \frac{1}{1!}\ff'(a),\,  \frac{1}{2!}\ff''(a),\,  \frac{1}{3!}\ff'''(a),\cdots}$\\
         %of the Taylor polynomial at the point $x=a$ 
         allows you to determine (predict) arbitrarily closely all the points in the vicinity of $x=a$:\footnote{
@@ -42,18 +42,15 @@ $
         \citePp{robinson1982}{886}
         }
         %\begin{tabular}{|@{2}{p{\tw/2-5mm}|}}
-        \\\begin{tabular}{|l|l|}
+        \\\begin{tabular}{|c|l|l|}
             \hline
-              \mc{1}{|c|}{Taylor coefficients} & \mc{1}{c|}{Fourier coefficients}
+              & \mc{1}{|c|}{Taylor coefficients} & \mc{1}{c|}{Fourier coefficients}
             \\\hline
-              Depend on derivatives $\ds\dndxn\ff(x)$
-             &Depend on integrals   $\ds\int_{x\in\R} \ff(x)e^{-i\omega x} \dx$
-            \\Behavior in the vicinity of a point.
-             &Behavior over the entire function.
-            \\Demonstrate trends locally.
-             &Demonstrate trends globally, such as oscillations.
-            \\For \prope{analytic} functions only---must be \prope{continuous}.
-             &Admits \prope{non-analytic} functions as well.
+              \imark&Depend on derivatives $\ds\dndxn\ff(x)$        &Depend on integrals   $\ds\int_{x\in\R} \ff(x)e^{-i\omega x} \dx$
+            \\\imark&Behavior in the vicinity of a point.           &Behavior over the entire function.
+            \\\imark&Demonstrate trends locally.                    &Demonstrate trends globally. %, such as oscillations.
+            \\\imark&Admits \prope{analytic} functions only---      &Admits \prope{non-analytic} functions as well---
+            \\      &must be \prope{continuous}.                    &even if they are \prope{discontinuous}.
             \\\hline
         \end{tabular}
 \end{enumerate}
